# ResumeForge

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: analyze-job.md  cover-letter.md  generate-resume.md  update-profile.md
.codex/: config.toml
.codex/prompts/: analyze-job.md  cover-letter.md  generate-resume.md  update-profile.md
.gemini/: settings.json
.gemini/commands/: analyze-job.toml  cover-letter.toml  generate-resume.toml  update-profile.toml
docs/: agent-system.md  architecture.md  ats-validation.md  recruiter-intelligence.md  roadmap.md  role-archetypes.md  yaml-schema.md
examples/: jd.md  job.md  resume.md
prompts/: ats-rules.md  recruiter-signals.md  resume-best-practices.md
scripts/: ai-detect.py  ai-detect.sh  ats-check.py  ats-check.sh  find-photo.sh  list-templates.sh  render-pdf.py  render-pdf.sh  welcome.sh
src/resumeforge/: __init__.py  agents.py  api.py  cli.py  documents.py  pipeline.py  providers.py  rendering.py  resume_templates.py  schemas.py  tailoring.py  text.py  yaml_io.py
templates/: manifest.json
templates/classic-clean/: index.html  style.css
templates/editorial-compact/: index.html  style.css
templates/modern-line/: index.html  style.css
templates/portfolio-mirror/: index.html  style.css
templates/portrait/: index.html  style.css
templates/portrait-noir/: index.html  style.css
tests/: test_pipeline.py  test_providers.py  test_tailoring.py
