[project]
name = "resumeforge"
version = "0.1.0"
description = "AI-native multi-agent resume intelligence and career optimization system."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ResumeForge Contributors" }]
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "langgraph>=0.2.60",
    "openai>=1.57.0",
    "opentelemetry-api>=1.28.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "pydantic-ai>=0.0.18",
    "pypdf>=5.1.0",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
resumeforge = "resumeforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resumeforge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
